--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,41 @@ body {
     background-color: #1b1b1b;
     color: #ffffff;
     text-align: center;
+    transition: color 1s ease;
+}
+
+header {
+    text-align: left;
 }
 
 h1 {
     color: #8b604e;
+    font-size: 40px;
+    margin-bottom: -20px;
+    transition: color 1s ease;
+}
+
+h2 {
+    color: #8b604e;
+    font-size: 35px;
+    transition: color 1s ease;
+}
+
+#buy-generators-to {
+    margin: 30px;
+}
+
+#generator-label {
+    margin-bottom: -10px;
 }
 
 #score {
     font-size: 24px;
+    margin: -10px;
+}
+
+#score-per-sec {
+    font-size: 20px;
     margin: 20px;
 }
 
@@ -18,12 +45,20 @@ button {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+    transition: 1s ease;
+}
+
+.shop-name-button, select {
+    font-size: 16px;
+    padding: 2px 10px;
+    transition: 1s ease;
 }
 
 table {
     margin: 0 auto;
     border-collapse: collapse;
-    width: 30%; 
+    width: 30%;
+    transition: 1s ease;
 }
 
 th, td  {
